# cccl

./: CMakePresets.json  README.md
.github/workflows/: build-docs.yml  jekyll-gh-pages.yml
c/parallel/: CMakeLists.txt
c2h/: generators.cu
ci/: build_common.sh  matrix.yaml
ci/cupy/: build_cupy.sh
cmake/: CCCLBuildCompilerTargets.cmake  CCCLGetDependencies.cmake
cub/cub/: util_device.cuh  util_type.cuh
cub/docs/: index.rst  repo.toml
cub/test/: catch2_large_array_sort_helper.cuh  catch2_large_problem_helper.cuh  catch2_radix_sort_helper.cuh  catch2_segmented_sort_helper.cuh  catch2_test_block_adjacent_difference.cu  catch2_test_block_histogram.cu  catch2_test_block_load.cu  catch2_test_block_load_to_shared.cu  catch2_test_block_merge_sort.cu  catch2_test_block_radix_sort_keys.cu  catch2_test_block_radix_sort_pairs.cu  catch2_test_block_reduce.cu  catch2_test_block_scan.cu  catch2_test_block_scan_api.cu  catch2_test_block_shuffle.cu  catch2_test_block_store.cu  catch2_test_device_adjacent_difference_custom_policy_hub.cu  catch2_test_device_adjacent_difference_substract_left.cu  catch2_test_device_adjacent_difference_substract_right.cu  catch2_test_device_batch_memcpy_custom_policy_hub.cu  catch2_test_device_binary_search.cu  catch2_test_device_bulk.cu  catch2_test_device_copy_batched.cu  catch2_test_device_copy_env.cu  catch2_test_device_copy_env_api.cu  catch2_test_device_copy_mdspan.cu  catch2_test_device_copy_mdspan_api.cu  catch2_test_device_decoupled_look_back.cu  catch2_test_device_find_if.cu  catch2_test_device_find_if_api.cu  catch2_test_device_for.cu  catch2_test_device_for_api.cu  catch2_test_device_for_copy.cu  catch2_test_device_for_each_in_extents.cu  catch2_test_device_for_each_in_extents_api.cu  catch2_test_device_for_each_in_layout.cu  catch2_test_device_for_each_in_layout_api.cu  catch2_test_device_for_env.cu  catch2_test_device_for_env_api.cu  catch2_test_device_histogram.cu  (+102 more)
docs/: index.html  nv-versions.json  pagelist.txt  repo.toml
docs/cub/: Doxyfile  test_overview.rst  tuning.rst
docs/libcudacxx/: contributing.rst
docs/thrust/: Doxyfile
docs_cccl/: gen_docs.bash  index.rst  repo.toml
libcudacxx/benchmarks/: CMakeLists.txt
libcudacxx/benchmarks/bench/for_each/: for_each.cu  for_each_n.cu  ranges_for_each.cu  ranges_for_each_n.cu
libcudacxx/benchmarks/bench/is_sorted/: basic.cu
libcudacxx/benchmarks/bench/is_sorted_until/: basic.cu
thrust/: README.md
(+3530 files in other folders)
